tooltip made multi-container and styles fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-.react-tooltip__place-top {
+#info-tooltip.react-tooltip__place-top {
   margin-top: -0.5rem !important;
 }
 
-.react-tooltip__place-bottom {
+#info-tooltip.react-tooltip__place-bottom {
   margin-top: 0.5rem !important;
 }
 
