--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,22 @@
       scrollbar-width: thin;
     }
   }
+
+  .landing :is(.landing-header, .landing-body) {
+    @apply w-full xl:w-[calc(100%_-_600px)];
+  }
+
+  .landing .landing-banner {
+    @apply w-full xl:w-[calc(100%_-_450px)];
+  }
+
+  .landing > .top-grid {
+    @apply -translate-y-1/3 md:translate-y-0 translate-x-3/4 sm:translate-x-1/2 xl:translate-x-[20%];
+  }
+
+  .landing > .bottom-grid {
+    @apply -translate-x-3/4 md:-translate-x-1/2 xl:-translate-x-1/4 translate-y-[20%];
+  }
 }
 
 @layer components {
